--- a/examples/simple.html
+++ b/examples/simple.html
@@ -23,14 +23,14 @@
   </div> <!--! end of #container -->
 
   <script src="../libs/jquery-1.5.2.js"></script>
-  <script src="../bin/drag.it.js"></script>
+  <script src="../bin/dilih.js"></script>
   <script>
     $(function() {
 
       var el = $('#testy');
       var el2 = $('#testy2');
       
-      var tmp = new Dilit(el, {
+      var tmp = new Dilih(el, {
         droppables: '.droppable',
         revertOnDropOff: true,
         onStart: function(drag) {
