--- a/examples/simple.html
+++ b/examples/simple.html
@@ -259,7 +259,7 @@
         delegateDrag: true,
         delegateContainer: '#drags6',
         updateDroppablesOnDrag: true,
-        cloneDrag: true,
+        ghost: true,
         onStart: function(drag) {
           drag.addClass('dragging');
         },
